fix(UI): fix hidden editor horizontal scroll bar

--- a/src/livecodes/styles/app.scss
+++ b/src/livecodes/styles/app.scss
@@ -887,6 +887,7 @@ a#result-button {
   display: flex;
   flex-direction: column;
   height: 100%;
+  justify-content: flex-end;
   overflow: hidden;
   position: relative;
   top: 0;
@@ -981,9 +982,8 @@ a#result-button {
 
   &#editor-tools {
     align-items: center;
-    bottom: 0;
     display: flex;
-    position: absolute;
+    flex-grow: 0;
 
     #editor-status {
       background-color: transparent;
